Change to a background script with scripting API
Change how we're applying our styles to pages.

Where before we had a content script directly edit the DOM to apply the
relevant styles from a JSON file, instead now we have a background
script listen for page loads and then select and apply a CSS file.

--- a/manifest.json
+++ b/manifest.json
@@ -15,12 +15,16 @@
     "48": "icons/stars-48.png"
   },
 
-  "content_scripts": [
-    {
-      "matches": ["*://*/*"],
-      "js": ["graffiti.js"]
-    }
+  "permissions": [
+    "*://*/*",
+    "webNavigation",
+    "scripting"
   ],
+
+  "background": {
+    "scripts": ["graffiti.js"],
+    "persistent": false
+  },
 
   "web_accessible_resources": [
     "taggers/my_taggers.json"
