Add poof context menu option

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
   "permissions": [
     "*://*/*",
     "webNavigation",
-    "scripting"
+    "scripting",
+    "menus"
   ],
 
   "background": {
